# AI_Resume_Analyzer

./: .env  .gitignore  README.md  app.py  main.py  pyproject.toml  requirments.txt
.devcontainer/: devcontainer.json
